internal-room-service.yaml
apiVersion: "v1"
kind: "Service"

metadata:
  name: "excalidraw-room"
  namespace: "excalidraw"

  labels:
    application: "excalidraw-room"

spec:
  type: "ClusterIP"

  selector:
    application: "excalidraw-room"

  ports:
    - port: 80
      protocol: "TCP"
      targetPort: 80
